--- a/source/form.html
+++ b/source/form.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" href="css/style.min.css">
+  <link rel="preload" href="/fonts/opensans.woff2" as="font">
 </head>
 
 <body class="page-body">
@@ -17,18 +18,18 @@
     <div class="page-header__inner">
       <div class="button-list button-list--closed page-header__button-list">
         <a class="button-list__logo" href="index.html">
-          <svg class="button-list__logo-image button-list__logo-image--ismobile" width="74.426px" height="22.859px">
+          <svg class="button-list__logo-image button-list__logo-image--ismobile" width="74" height="23">
             <use xlink:href="#logo-pink-white-mobile"></use>
           </svg>
-          <svg class="button-list__logo-image button-list__logo-image--istablet" width="146.3px" height="40.375px">
+          <svg class="button-list__logo-image button-list__logo-image--istablet" width="146" height="40">
             <use xlink:href="#logo-pink-white-tablet"></use>
           </svg>
-          <svg class="button-list__logo-image button-list__logo-image--isdesktop" width="146.3px" height="40.375px">
+          <svg class="button-list__logo-image button-list__logo-image--isdesktop" width="146" height="40">
             <use xlink:href="#logo-pink-white-desktop"></use>
           </svg>
         </a>
         <button class="button-list__toggle button-list__toggle--nojs">
-          <svg class="button-list__toggle-open--opened button-list__toggle-open" version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="49.945px" height="24.007px" viewBox="0 0 49.945 24.007" enable-background="new 0 0 49.945 24.007"
+          <svg class="button-list__toggle-open--opened button-list__toggle-open" version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="50" height="24" viewBox="0 0 49.945 24.007" enable-background="new 0 0 49.945 24.007"
             xml:space="preserve">
             <g id="miu">
               <g id="editor_list_view_hambuger_menu_glyph">
@@ -43,7 +44,7 @@
               </g>
             </g>
           </svg>
-          <svg class="button-list__toggle-close--closed button-list__toggle-close" version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="23.867px" height="23.867px" viewBox="0 0 23.867 23.867" enable-background="new 0 0 23.867 23.867"
+          <svg class="button-list__toggle-close--closed button-list__toggle-close" version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24" height="24" viewBox="0 0 23.867 23.867" enable-background="new 0 0 23.867 23.867"
             xml:space="preserve">
             <path fill=""
               d="M15.087,11.933l8.56-8.559c0.293-0.293,0.293-0.768,0-1.061L21.554,0.22C21.414,0.079,21.223,0,21.023,0 c-0.199,0-0.391,0.079-0.529,0.22l-8.561,8.56l-8.56-8.56c-0.282-0.282-0.78-0.282-1.061,0L0.22,2.313 c-0.293,0.293-0.293,0.768,0,1.061l8.56,8.559l-8.56,8.559c-0.293,0.293-0.293,0.768,0,1.062l2.093,2.094 c0.141,0.142,0.331,0.22,0.53,0.22c0.199,0,0.39-0.078,0.53-0.22l8.561-8.56l8.56,8.56c0.141,0.142,0.332,0.22,0.53,0.22 c0.199,0,0.39-0.078,0.53-0.22l2.093-2.094c0.293-0.294,0.293-0.769,0-1.062L15.087,11.933z" />
@@ -78,76 +79,94 @@
           Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!
           <b class="page-main__post-items">Пожалуйста, заполните форму ниже:</b>
         </p>
+        <p class="page-main__post-item page-main__post-item--isdesktop">
+          Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!
+          Пожалуйста, заполните форму ниже:
+        </p>
       </div>
       <form class="userform page-main__userform" action="index.html" method="post">
-        <div class="userform__list">
-          <label class="userform__list-item"><span class="userform__list-item-text"> Фамилия:</span>
-            <input class="userform__list-input" type="text" name="surname" placeholder="Укажите фамилию *" autocomplete="off" required>
+        <div class="formusername userform__formusername">
+          <label class="formusername__item"><span class="formusername__item-text"> Фамилия:</span>
+            <input class="formusername__input" type="text" name="surname" placeholder="Укажите фамилию *" autocomplete="off" required>
           </label>
-          <label class="userform__list-item"><span class="userform__list-item-text">Имя:</span>
-            <input class="userform__list-input userform__list-input--name" type="text" name="name" placeholder="Введите ваше имя *" autocomplete="off" required>
+          <label class="formusername__item"><span class="formusername__item-text">Имя:</span>
+            <input class="formusername__input ususername__input--name" type="text" name="name" placeholder="Введите ваше имя *" autocomplete="off" required>
           </label>
-          <label class="userform__list-item"><span class="userform__list-item-text">Отчество:</span>
-            <input class="userform__list-input" type="text" name="patronymic" placeholder="Ну и отчество тоже" autocomplete="off">
+          <label class="formusername__item"><span class="formusername__item-text">Отчество:</span>
+            <input class="formusername__input" type="text" name="patronymic" placeholder="Ну и отчество тоже" autocomplete="off">
           </label>
         </div>
-        <div class="userform__list-checkbox">
-          <fieldset class="userform__area-checkbox">
-            <legend class="userform__title"><span class="userform__checkbox-title">Ваши безбашенные достижения в путешествии</span></legend>
-            <label class="userform__checkbox-name">Сделал селфи с акулой
-              <input class="userform__checkbox" type="checkbox" name="type1" checked>
+        <div class="formcheckbox userform__formcheckbox">
+          <fieldset class="formcheckbox__area">
+            <legend class="formcheckbox__legend"><span class="formcheckbox__title">Ваши безбашенные достижения в путешествии</span></legend>
+            <ul class="formcheckbox__list">
+              <li class="formcheckbox__item">
+                <label class="formcheckbox__name">Сделал селфи с акулой
+                  <input class="formcheckbox__input" type="checkbox" name="type1" checked>
+                </label>
+                <label class="formcheckbox__name">Обгорел на пляже
+                  <input class="formcheckbox__input" type="checkbox" name="type2" checked>
+                </label>
+              </li>
+              <li class="formcheckbox__item">
+                <label class="formcheckbox__name">Видел Чака Норриса
+                  <input class="formcheckbox__input" type="checkbox" name="type3">
+                </label>
+                <label class="formcheckbox__name">Накупил сувениров
+                  <input class="formcheckbox__input" type="checkbox" name="type4">
+                </label>
+              </li>
+              <li class="formcheckbox__item">
+                <label class="formcheckbox__name">Удержал башню
+                  <input class="formcheckbox__input" type="checkbox" name="type5" checked>
+                </label>
+                <label class="formcheckbox__name">Разгромил отель
+                  <input class="formcheckbox__input" type="checkbox" name="type6">
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+        </div>
+        <div class="formcontact userform__formcontact">
+          <fieldset class="formcontact__area">
+            <legend class="formcontact__title">Контактная информация</legend>
+            <ul class="formcontact__list">
+              <li class="formcontact__item">
+                <label class="formcontact__name"><span class="formcontact__text formcontact__text--phone">Номер телефона</span>
+                  <input class="formcontact__input" type="tel" name="phone" placeholder="Номер, пожалуйста" autocomplete="off">
+                </label>
+              </li>
+              <li class="formcontact__item">
+                <label class="formcontact__name"><span class="formcontact__text formcontact__text--mail">Адрес почты</span>
+                  <input class="formcontact__input" type="email" name="email" placeholder="Введите почту *" autocomplete="off" required>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+        </div>
+        <div class="formradio userform_formsradio">
+          <fieldset class="formradio__area">
+            <legend class="formradio__legend"><span class="formradio__title">С каким приложением путешествовали?</span></legend>
+            <label class="formradio__name">Pink для iOS
+              <input class="formradio__input" type="radio" name="application" value="iOS" checked>
             </label>
-            <label class="userform__checkbox-name">Обгорел на пляже
-              <input class="userform__checkbox" type="checkbox" name="type2" checked>
+            <label class="formradio__name">Pink на Android
+              <input class="formradio__input" type="radio" name="application" value="Android">
             </label>
-            <label class="userform__checkbox-name">Видел Чака Норриса
-              <input class="userform__checkbox" type="checkbox" name="type3">
-            </label>
-            <label class="userform__checkbox-name">Накупил сувениров
-              <input class="userform__checkbox" type="checkbox" name="type4">
-            </label>
-            <label class="userform__checkbox-name">Удержал башню
-              <input class="userform__checkbox" type="checkbox" name="type5" checked>
-            </label>
-            <label class="userform__checkbox-name">Разгромил отель
-              <input class="userform__checkbox" type="checkbox" name="type6">
+            <label class="formradio__name">Windows Phone
+              <input class="formradio__input" type="radio" name="application" value="Windows">
             </label>
           </fieldset>
         </div>
-        <div class="userform__list-contact">
-          <fieldset class="userform__area-contact">
-            <legend class="userform__contact-title">Контактная информация</legend>
-            <label class="userform__contact-item"><span class="userform__contact-text userform__contact-text--phone">Номер телефона</span>
-              <input class="userform__contact-input" type="tel" name="phone" placeholder="Номер, пожалуйста" autocomplete="off">
-            </label>
-            <label class="userform__contact-item"><span class="userform__contact-text userform__contact-text--mail">Адрес почты</span>
-              <input class="userform__contact-input" type="email" name="email" placeholder="Введите почту *" autocomplete="off" required>
-            </label>
-          </fieldset>
-        </div>
-        <div class="userform__list-radio">
-          <fieldset class="userform__area-radio">
-            <legend class="userform__title-radio"><span class="userform__radio-title">С каким приложением путешествовали?</span></legend>
-            <label class="userform__radio-name">Pink для iOS
-              <input class="userform__radio" type="radio" name="application" value="iOS" checked>
-            </label>
-            <label class="userform__radio-name">Pink на Android
-              <input class="userform__radio" type="radio" name="application" value="Android">
-            </label>
-            <label class="userform__radio-name">Windows Phone
-              <input class="userform__radio" type="radio" name="application" value="Windows">
-            </label>
-          </fieldset>
-        </div>
-        <div class="userform__list-textarea">
-          <fieldset class="userform__area-text">
-            <legend class="userform__title-textarea"><span class="userform__text-title">Опишите свои эмоции</span></legend>
-            <textarea class="userform__textarea" name="text" autocomplete="off">Можно прям в красках, не стесняясь в выражениях</textarea>
+        <div class="formtextarea userform__formtextarea">
+          <fieldset class="formtextarea__list">
+            <legend class="formtextarea__legend"><span class="formtextarea__title">Опишите свои эмоции</span></legend>
+            <textarea class="formtextarea__form" name="text" autocomplete="off">Можно прям в красках, не стесняясь в выражениях</textarea>
           </fieldset>
         </div>
         <div class="userform__submit-list">
           <button class="userform__submit" type="submit" name="button">Отправить форму</button>
-          <p class="userform__commit"><span class="userform__star">*</span> — обязательные поля</p>
+          <p class="userform__commit"><span class="userform__star">*</span> — обязательные<b class="userform__commit userform__commit--isdesktop">для заполнения</b> поля</p>
         </div>
       </form>
     </div>
@@ -155,17 +174,17 @@
   <footer class="page-footer">
     <div class="page-footer__inner">
       <a class="page-footer__logo" href="index.html">
-        <svg class="page-footer__logo-image page-footer__logo-image--ismobile" width="146.3px" height="40.375px">
+        <svg class="page-footer__logo-image page-footer__logo-image--ismobile" width="146" height="40">
           <use xlink:href="#logo-pink-blue-mobile"></use>
         </svg>
-        <svg class="page-footer__logo-image page-footer__logo-image--isdesktop" width="146.3px" height="40.375px">
+        <svg class="page-footer__logo-image page-footer__logo-image--isdesktop" width="146" height="40">
           <use xlink:href="#logo-pink-blue-desktop"></use>
         </svg>
       </a>
       <ul class="page-footer__social-list">
         <li class="page-footer__social-item">
           <a class="page-footer__social-link page-footer__social-link--twitter" href="https://www.twitter.com/htmlacademy">
-            <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.5px" height="14.663px" viewBox="0 0 17.5 14.663" enable-background="new 0 0 17.5 14.663" xml:space="preserve">
+            <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17" height="15" viewBox="0 0 17.5 14.663" enable-background="new 0 0 17.5 14.663" xml:space="preserve">
               <g id="W6EeEF_1_">
                 <g>
                   <path fill="#D22856" clip-rule="evenodd"
@@ -177,7 +196,7 @@
         </li>
         <li class="page-footer__social-item">
           <a class="page-footer__social-link page-footer__social-link--facebook" href="https://www.facebook.com/htmlacademy">
-            <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="8.673px" height="18.944px" viewBox="0 0 8.673 18.944" enable-background="new 0 0 8.673 18.944" xml:space="preserve">
+            <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="9" height="19" viewBox="0 0 8.673 18.944" enable-background="new 0 0 8.673 18.944" xml:space="preserve">
               <path fill="#D22856"
                 d="M6.275,3.357c0.799,0,1.599,0,2.398,0c0-1.119,0-2.238,0-3.357c-0.959,0-1.92,0-2.878,0C2.656,0.181,1.54,2.387,1.948,6.115 H0v3.517h1.958c0,3.104,0,6.208,0,9.312c1.279,0,2.558,0,3.837,0c0-3.104,0-6.208,0-9.312h2.857V6.115H5.786 C5.765,5.07,5.75,3.709,6.275,3.357z" />
             </svg>
@@ -185,7 +204,7 @@
         </li>
         <li class="page-footer__social-item">
           <a class="page-footer__social-link page-footer__social-link--youtube" href="https://www.youtube.com/htmlacademy">
-            <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="14.64px" height="13.96px" viewBox="0 0 14.64 13.96" enable-background="new 0 0 14.64 13.96" xml:space="preserve">
+            <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="15" height="14" viewBox="0 0 14.64 13.96" enable-background="new 0 0 14.64 13.96" xml:space="preserve">
               <path fill="#D22856" d="M1.775,13.78C0.799,14.257,0,13.758,0,12.671V1.29c0-1.088,0.799-1.585,1.775-1.109l12.133,5.932 c0.975,0.478,0.975,1.258,0,1.736L1.775,13.78z" />
             </svg>
           </a>
@@ -194,7 +213,7 @@
       <div class="page-footer__copyright">
         <b class="page-footer__copyright-text">Разработано</b>
         <a class="page-footer__copyright-button" href="https://htmlacademy.ru/intensive/adaptive">
-          <svg class="page-footer__copyright-image" version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+          <svg class="page-footer__copyright-image" version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="27" height="34" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
             <path fill=""
               d="M13.62,0.017L13.472,0L0,1.412v24.661l13.472,8.017l13.43-7.99l0.042-0.026V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 l-0.001-0.104L13.407,5.28l-0.088-0.056v0.109L1.925,12.118V3.147l11.547-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.013,1.415l5.904,3.513l-0.86,0.507l-5.031-2.992l-0.013,1.415l3.827,2.275l-0.782,0.523l-3.032-1.787 l-0.013,1.413l1.852,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.015,1.044l-7.941-4.728L5.395,19.65 l7.979,4.796l0.017,1.076l-7.972-4.741l-0.013,1.415l8.021,4.821l0.045,0.026l8.143-4.872v-1.268l-0.011-0.148v-3.761l3.415-2.036 v10.02L13.472,31.85L1.925,24.979V15.127z" />
           </svg>
@@ -204,20 +223,28 @@
   </footer>
   <section class="modal-popup">
     <h2 class="visually-hidden">Заявка принята</h2>
-    <p class="modal-popup__title">Ваша заявка отправлена</p>
-    <p class="modal-popup__text">
-      Спасибо за ваше участие, ваша заявка уже поступила к нам.
-      В ближайшее время мы рассмотрим ее и оповестим вас.
-    </p>
-    <button type="button" name="button">ЗАКРЫТЬ ОКНО</button>
+    <div class="modal-popup__wrapper">
+      <p class="modal-popup__title">Ваша заявка отправлена</p>
+      <p class="modal-popup__text">
+        Спасибо за ваше участие, ваша заявка уже поступила к нам.
+        В ближайшее время мы рассмотрим ее и оповестим вас.
+      </p>
+    </div>
+    <div class="modal-popup__button-wrapper">
+      <button class="modal-popup__button" type="button" name="button">Закрыть окно</button>
+    </div>
   </section>
-  <section class="modal-popup modal-popup--failure">
+  <section class="modal-failure">
     <h2 class="visually-hidden">Ошибка ввода</h2>
-    <p class="modal-popup__title">Что-то пошло не так!</p>
-    <p class="modal-popup__text">
-      Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить
-    </p>
-    <button type="button" name="button">OK</button>
+    <div class="modal-failure__wrapper">
+      <p class="modal-failure__title">Что-то пошло не так!</p>
+      <p class="modal-failure__text">
+        Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить
+      </p>
+    </div>
+    <div class="modal-failure__button-wrapper">
+      <button class="modal-failure__button" type="button" name="button">Oк</button>
+    </div>
   </section>
   <script src="js/script.js"></script>
   <script src="js/picturefill.js" async></script>
